<resources>
    <string name="app_name">PiontAndPiont2</string>
    <string name="appName">点滴之间</string>
    <string name="register">新用户注册</string>
    <string name="login">登录</string>
    <string name="username">账号</string>
    <string name="userpasswd">密码</string>
    <string name="forgetpasswd">忘记密码</string>
    <string name="repasswd">确认密码</string>
    <string name="telphone">手机号</string>
    <string name="suiji">随机码</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="group_name">群名称</string>
    <string name="group_hobby">群爱好</string>
    <string name="group_descript">群描述</string>
    <string name="group_create">创建</string>
    <string name="group_member">群成员</string>
    <string name="invite_new_member">邀请</string>
    <string name="search">搜索</string>
    <string name="search_apply">加群</string>
    <string name="search_descript">群描述:666666666666666666666</string>
    <string name="member_name">成员昵称</string>
    <string name="search_groupNameAndUuip">群名或群号搜索</string>
    <string name="my_profile">我的资料</string>
</resources>
