<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <com.example.zhw.piontandpiont2.Video.CustomVideoView
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:background="@drawable/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appName"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:textColor="#fff"/>
        </LinearLayout>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:background="@drawable/whiteround"
            android:hint="@string/username"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/et_passwd"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:password="true"
            android:background="@drawable/whiteround"
            android:hint="@string/userpasswd"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/repasswd"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:background="@drawable/whiteround"
            android:hint="@string/repasswd"
            android:paddingLeft="5dp"
            android:password="true"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/et_telphone"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:background="@drawable/whiteround"
            android:hint="@string/telphone"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:maxLength="11"
            android:inputType="number"
            android:layout_gravity="center_horizontal"
            />
        <RelativeLayout
            android:layout_width="240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/line"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@drawable/vifyback">
                <TextView
                    android:id="@+id/tv_vify"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="随机验证码"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000"/>
            </LinearLayout>
            <EditText
                android:id="@+id/et_vify"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/suiji"
                android:background="@drawable/whiteround"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="#fff"
            android:background="@drawable/btnback"/>
    </LinearLayout>
</FrameLayout>