<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/CRA_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/CRA_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:clipToPadding="true"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="创建群"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rec_input"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@id/group_name"
        app:layout_constraintTop_toBottomOf="@id/CRA_action_bar"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/group_member"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@id/topView"
        app:layout_constraintEnd_toEndOf="@id/topView"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/topView"
        app:layout_constraintTop_toTopOf="@id/topView"
        app:layout_constraintVertical_bias="0.05" />

    <ListView
        android:id="@+id/listView_create"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/topView"
        app:layout_constraintEnd_toEndOf="@id/topView"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/topView"
        app:layout_constraintTop_toTopOf="@id/topView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/invite_new_member"
        android:textColor="#1C86EE"
        app:layout_constraintBottom_toBottomOf="@id/topView"
        app:layout_constraintEnd_toEndOf="@id/topView"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/topView"
        app:layout_constraintTop_toTopOf="@id/topView"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/button_create_invite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_create_add"
        app:layout_constraintBottom_toBottomOf="@id/topView"
        app:layout_constraintEnd_toEndOf="@id/topView"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/topView"
        app:layout_constraintTop_toTopOf="@id/topView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rec_input"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/group_hobby"
        app:layout_constraintTop_toBottomOf="@id/topView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/group_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/group_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_hobby"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rec_input"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/group_descript"
        app:layout_constraintTop_toBottomOf="@id/group_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/group_hobby_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:hint="@string/group_hobby" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_descript"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rec_input"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/group_hobby">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/group_descript_deit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:hint="@string/group_descript" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rec_button_blue"
        android:text="@string/group_create"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

</android.support.constraint.ConstraintLayout>