<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFFFE">

    <com.loopj.android.image.SmartImageView
        android:id="@+id/search_avator"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/search_group_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxEms="10"
        android:maxLines="1"
        android:text="@string/group_name"
        android:textColor="#505050"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/search_groupId1"
        app:layout_constraintLeft_toRightOf="@id/search_avator"
        app:layout_constraintTop_toTopOf="@id/search_avator" />

    <TextView
        android:id="@+id/search_group_descript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxEms="15"
        android:maxLines="1"
        android:text="@string/search_descript"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/search_groupId1"
        app:layout_constraintLeft_toRightOf="@id/search_avator"
        app:layout_constraintTop_toBottomOf="@id/search_group_name" />

    <TextView
        android:id="@+id/search_groupId1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxEms="10"
        android:maxLines="1"
        android:text="群号:"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/search_avator"
        app:layout_constraintLeft_toRightOf="@id/search_avator"
        app:layout_constraintRight_toLeftOf="@id/search_groupId2"
        app:layout_constraintTop_toBottomOf="@id/search_group_descript" />

    <TextView
        android:id="@+id/search_groupId2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxEms="10"
        android:maxLines="1"
        android:text="群号"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/search_avator"
        app:layout_constraintLeft_toRightOf="@id/search_groupId1"
        app:layout_constraintTop_toBottomOf="@id/search_group_descript" />

    <Button
        android:id="@+id/search_button_apply"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/btn_green"
        android:text="@string/search_apply"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="@id/search_avator"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_avator" />

</android.support.constraint.ConstraintLayout>